# eth-algolab

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  judge.sh  quicktest.cpp  run-all.sh  run-judge.sh  run.sh
extra/monkeyisland/: main.cpp
extra/monkeyisland/testsets/: sample.in
extra/oddpath/: main.cpp
extra/oddpath/testsets/: my.in  my2.in  sample.in  test.in
extra/phantom/: main.cpp
extra/phantom/testsets/: sample.in
extra/stamps/: main.cpp
extra/stamps/testsets/: sample.in
extra/sweepers/: main.cpp
extra/sweepers/testsets/: test1.in  test1.out
practice/bfs/: main.cpp
practice/even_pairs/: main.cpp
practice/strings/: main.cpp
week1/build_the_sum/: main  main.cpp
week1/dominoes/: main  main.cpp
week1/even_matrices/: main  main.cpp
week1/even_matrices/testsets/: sample.in
week1/even_pairs/: main  main.cpp
week1/even_pairs/testsets/: sample.in
week1/potw/: main  main.cpp
week10/evolution/: main.cpp
week10/evolution/testsets/: my.in
week10/light/: main.cpp
week10/light/testsets/: my.in
week10/majestys_secret_service/: main.cpp
week10/newtiles/: main.cpp
week10/poker_chips/: main.cpp
week10/poker_chips/testsets/: my.in
week10/potw/: main.cpp  mainbak2.cpp
week10/return_of_the_jedi/: main.cpp
week11/carsharing/: main.cpp
week11/planks/: main.cpp  main_old.cpp  main_old2.cpp
week11/planks/testsets/: my.in
week11/potw/: main.cpp
week11/san_francisco/: main.cpp  main_old.cpp  my.in
week11/strikesback/: main.cpp
week11/strikesback/testsets/: sample.in
week12/casino_royale/: main.cpp  main_badidea.cpp
week12/hongkong/: main.cpp
week12/hongkong/testsets/: my.in  my.out
week12/light_pattern/: main.cpp
week12/potw/: main.cpp  main_bfs.cpp  main_dfs.cpp  main_leaf.cpp  main_old.cpp  nue  test1diff.out
week12/radiation/: main.cpp
week13/bobsburden/: main.cpp
week13/cantonal_courier/: main.cpp  main_dp.cpp  main_greedy.cpp  main_lp.cpp
week13/clues/: main.cpp
week13/corbusier/: main.cpp
week13/moving_books/: main.cpp
week13/testexam/: main.cpp
week14/potw/: main.cpp  main_lp.cpp
week2/beach_bars/: main  main.cpp
week2/burning_coins/: main  main.cpp
week2/great_game/: lol.cpp  main.cpp
week2/great_game/testsets/: test5.in
week2/potw/: main  main.cpp
week2/search_snippets/: main  main.cpp
week3/almost-antenna/: main.cpp
week3/antenna/: main.cpp
week3/firsthit/: main.cpp
week3/hit/: main.cpp
week3/potw/: main.cpp  main_slidewindow.cpp
week4/ant_challenge/: main.cpp
week4/buddies/: main.cpp
week4/graphs/: main.cpp
week4/importantbridges/: main.cpp  main_visitor.cpp
week4/potw/: main.cpp
week4/shortestpaths/: main.cpp  visualization.py
week5/attack_of_the_clones/: main.cpp
week5/attack_of_the_clones/testsets/: my.in
week5/boats/: main.cpp
week5/boats/testsets/: single.in
week5/high_school_teams/: main.cpp
week5/light_at_the_museum/: check  check.cpp  main.cpp  o1.out  o2.out  o3.out  o4.out
week5/potw/: main.cpp
week5/punch/: main.cpp  main_dp.cpp  main_old.cpp  main_old2.cpp
week6/cointossing/: main.cpp
week6/kingdom_defence/: main.cpp
week6/potw/: main.cpp
week6/shopping/: main.cpp
week6/tetris/: main.cpp
week7/diet/: main.cpp
week7/inball/: main.cpp
week7/maximum/: main.cpp
week7/portfolios/: main.cpp
week7/potw/: lui.cpp  main.cpp
week8/bistro/: main.cpp
week8/germs/: main.cpp
week8/graypes/: main.cpp
week8/h1n1/: main.cpp
week8/potw/: main.cpp
week9/algocoon/: main.cpp
week9/canteen/: main.cpp
week9/marathon/: main.cpp
week9/potw/: main.cpp  main_dela.cpp  main_old.cpp
week9/real_estate/: main.cpp
week9/satellites/: main.cpp
(+11 files in other folders)
